[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Lorcan Rae <lorcanrae@gmail.com>"]
readme = "README.md"
packages = [{include = "longest_word"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
